# StellarWill-Blockchain-Tabanli-Dijital-Vasiyet-Sistemi

./: Cargo.toml  README.md
.soroban/network/: testnet.toml
frontend/: index.html
src/: lib.rs  main.rs
