[package]
name = "stellar_will"
version = "0.1.0"
edition = "2021"


[dependencies]
syn = "2.0.52"
soroban-sdk = { version = "21.7.4", default-features = false, features = ["testutils"] }
warp = "0.3"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"

[lib]
name = "stellar_will_lib"
crate-type = ["cdylib"]

[[bin]]
name = "stellar_will"
path = "src/main.rs"